stock price tool added

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 46,
    "id": "ff40275a",
    "metadata": {},
    "outputs": [],
@@ -26,6 +26,8 @@
     "from langchain_community.tools.tavily_search import TavilySearchResults\n",
     "\n",
     "from langchain.tools import tool\n",
+    "\n",
+    "import yfinance as yf\n",
     "\n",
     "_ = load_dotenv()"
    ]
@@ -598,8 +600,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "d619b48b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@tool\n",
+    "def get_stock_price(ticker:str) -> str:\n",
+    "    '''Returns prices for a specified stock ticker\n",
+    "\n",
+    "        Args:\n",
+    "        ticker:str, stock ticker\n",
+    "    '''\n",
+    "    try:\n",
+    "        stock = yf.Ticker(ticker)\n",
+    "        data = stock.history(period='1d')\n",
+    "        if data.empty:\n",
+    "            return f\"There is no data for {ticker} ticker. Please, check it.\"\n",
+    "        latest_close = data['Close'].iloc[-1]\n",
+    "        currency = stock.info.get('currency', '')\n",
+    "        symbol_map = {\n",
+    "            'INR': '₹',\n",
+    "            'EUR': '€',\n",
+    "            'GBP': '£',\n",
+    "            'USD': '$'\n",
+    "        }\n",
+    "        symbol = symbol_map.get(currency, '')\n",
+    "        currency_text = currency if currency else ''\n",
+    "        if symbol:\n",
+    "            return f\"The latest closing price of {ticker.upper()} was {symbol}{latest_close:.2f}\"\n",
+    "        else:\n",
+    "            return f\"The latest closing price of {ticker.upper()} was {latest_close:.2f} {currency_text}\"\n",
+    "    except Exception as e:\n",
+    "        return f\"The following error occured while fetching the data:\\n{str(e)}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "974ffb00",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The latest closing price of TCS.NS was ₹2717.40'"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_stock_price.invoke('TCS.NS')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0c9e9d9",
    "metadata": {},
    "outputs": [],
    "source": []
