word length counter tool added

--- a/test.ipynb
+++ b/test.ipynb
@@ -658,8 +658,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "c0c9e9d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@tool\n",
+    "def get_word_length(word:str) -> int:\n",
+    "    '''Returns the length of a specified word\n",
+    "\n",
+    "        Args:\n",
+    "        word: str, a word\n",
+    "    '''\n",
+    "    return len(word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "3149f00e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_word_length.invoke('hello')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dff64f93",
    "metadata": {},
    "outputs": [],
    "source": []
