tool invoking added

--- a/test.ipynb
+++ b/test.ipynb
@@ -696,8 +696,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "dff64f93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tools = [multiply, get_word_length, get_stock_price]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "2af76568",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm_with_tool = chat_llm.bind_tools(tools)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "76ffa151",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 90, 'prompt_tokens': 467, 'total_tokens': 557, 'completion_tokens_details': {'accepted_prediction_tokens': None, 'audio_tokens': None, 'reasoning_tokens': 40, 'rejected_prediction_tokens': None}, 'prompt_tokens_details': {'audio_tokens': None, 'cached_tokens': 448}, 'prompt_cache_hit_tokens': 448, 'prompt_cache_miss_tokens': 19}, 'model_provider': 'openai', 'model_name': 'deepseek-reasoner', 'system_fingerprint': 'fp_eaab8d114b_prod0820_fp8_kvcache', 'id': 'fc8b8283-6709-471c-9fbc-319b8d764325', 'finish_reason': 'tool_calls', 'logprobs': None}, id='lc_run--019c6bba-4928-72f2-b388-af41274ea309-0', tool_calls=[{'name': 'get_stock_price', 'args': {'ticker': 'TCS.NS'}, 'id': 'call_00_5dfoq8C1Ikhslq0mgqxzcOsd', 'type': 'tool_call'}], invalid_tool_calls=[], usage_metadata={'input_tokens': 467, 'output_tokens': 90, 'total_tokens': 557, 'input_token_details': {'cache_read': 448}, 'output_token_details': {'reasoning': 40}})"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = llm_with_tool.invoke('What is the stock price of TCS.NS?')\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "fcb7c086",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'get_stock_price',\n",
+       "  'args': {'ticker': 'TCS.NS'},\n",
+       "  'id': 'call_00_5dfoq8C1Ikhslq0mgqxzcOsd',\n",
+       "  'type': 'tool_call'}]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.tool_calls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "065f239b",
    "metadata": {},
    "outputs": [],
    "source": []
