function_1 func filled

--- a/test.ipynb
+++ b/test.ipynb
@@ -763,18 +763,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 65,
+   "id": "b8714deb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system_initial_state = ' '.join([\n",
+    "    'You are a helpful assistant',\n",
+    "    'that can use tools to answer questions.'\n",
+    "])\n",
+    "SYSTEM_PROPMT = SystemMessage(content=system_initial_state)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "id": "065f239b",
    "metadata": {},
    "outputs": [],
    "source": [
     "def function_1(state:MessagesState):\n",
-    "    pass"
+    "    user_question = state['messages']\n",
+    "    input_question = [SYSTEM_PROPMT] + user_question\n",
+    "    response = llm_with_tool.invoke(input_question)\n",
+    "    return {'messages': [response]}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 67,
    "id": "a31de38b",
    "metadata": {},
    "outputs": [],
@@ -784,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 68,
    "id": "72504619",
    "metadata": {},
    "outputs": [],
@@ -794,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 69,
    "id": "71b5bd5d",
    "metadata": {},
    "outputs": [],
@@ -809,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 70,
    "id": "faaaf1cf",
    "metadata": {},
    "outputs": [
