deepseek-reasoner replaced with deepseek-chat to make tool calling work

--- a/notebook/test.ipynb
+++ b/notebook/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "id": "ff40275a",
    "metadata": {},
    "outputs": [],
@@ -35,17 +35,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "502b1103",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Hello! I'm just a computer program, so I don't have feelings, but I'm functioning perfectly and ready to help you. 😊\\n\\nHow are *you* doing today? Is there anything I can assist you with?\""
+       "\"Hello! I'm doing well, thank you for asking! 😊 How are you today? Is there anything I can help you with?\""
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,8 @@
    "source": [
     "chat_llm = ChatOpenAI(\n",
     "    base_url='https://api.deepseek.com',\n",
-    "    model='deepseek-reasoner',\n",
+    "    # model='deepseek-reasoner',\n",
+    "    model='deepseek-chat',\n",
     "    api_key=os.getenv('DEEPSEEK_API')\n",
     ")\n",
     "\n",
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "1289ae16",
    "metadata": {},
    "outputs": [],
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "f7ea1051",
    "metadata": {},
    "outputs": [],
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "85d1737e",
    "metadata": {},
    "outputs": [],
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "138c92a6",
    "metadata": {},
    "outputs": [],
@@ -110,17 +111,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "77207d68",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x1c131499df0>"
+       "<langgraph.graph.state.StateGraph at 0x1a7263642f0>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,17 +133,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "ae842237",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x1c131499df0>"
+       "<langgraph.graph.state.StateGraph at 0x1a7263642f0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "fb986186",
    "metadata": {},
    "outputs": [],
@@ -165,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "3cfb6782",
    "metadata": {},
    "outputs": [
@@ -175,7 +176,7 @@
        "Graph(nodes={'__start__': Node(id='__start__', name='__start__', data=RunnableCallable(tags=None, recurse=True, explode_args=False, func_accepts={}), metadata=None), 'llm_call': Node(id='llm_call', name='llm_call', data=llm_call(tags=None, recurse=True, explode_args=False, func_accepts={}), metadata=None), 'token_counter': Node(id='token_counter', name='token_counter', data=token_counter(tags=None, recurse=True, explode_args=False, func_accepts={}), metadata=None), '__end__': Node(id='__end__', name='__end__', data=None, metadata=None)}, edges=[Edge(source='__start__', target='llm_call', data=None, conditional=False), Edge(source='llm_call', target='token_counter', data=None, conditional=False), Edge(source='token_counter', target='__end__', data=None, conditional=False)])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "3313b21c",
    "metadata": {},
    "outputs": [
@@ -207,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "6798bfe8",
    "metadata": {},
    "outputs": [],
@@ -221,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "c9aea2ff",
    "metadata": {},
    "outputs": [
@@ -229,11 +230,11 @@
      "data": {
       "text/plain": [
        "{'messages': [HumanMessage(content='Hi, this is Bob. Say hello in detail.', additional_kwargs={}, response_metadata={}),\n",
-       "  AIMessage(content=\"Hello, Bob! It's a genuine pleasure to meet you. I hope this message finds you having a truly wonderful day, wherever you are and whatever you're doing.\\n\\nA detailed hello means more than just the word—it's an acknowledgment, a small moment of connection. So, welcome. I'm here, ready to listen, chat, help with questions, brainstorm ideas, or just offer a bit of digital companionship. Whether you're here for something specific or just passing the time, I'm glad our paths crossed.\\n\\nWhat's on your mind today, Bob? I'm all ears.\\n\\nWarmly,\\nYour AI Assistant\", additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 247, 'prompt_tokens': 15, 'total_tokens': 262, 'completion_tokens_details': {'accepted_prediction_tokens': None, 'audio_tokens': None, 'reasoning_tokens': 120, 'rejected_prediction_tokens': None}, 'prompt_tokens_details': {'audio_tokens': None, 'cached_tokens': 0}, 'prompt_cache_hit_tokens': 0, 'prompt_cache_miss_tokens': 15}, 'model_provider': 'openai', 'model_name': 'deepseek-reasoner', 'system_fingerprint': 'fp_eaab8d114b_prod0820_fp8_kvcache', 'id': 'cd2eda9a-6d27-44f8-aa66-5f89884d0e7c', 'finish_reason': 'stop', 'logprobs': None}, id='lc_run--019c6a96-c7f1-75b0-aaa6-9daf217546a1-0', tool_calls=[], invalid_tool_calls=[], usage_metadata={'input_tokens': 15, 'output_tokens': 247, 'total_tokens': 262, 'input_token_details': {'cache_read': 0}, 'output_token_details': {'reasoning': 120}}),\n",
-       "  AIMessage(content='Total token number in the generated answer (word count) is 93', additional_kwargs={}, response_metadata={}, tool_calls=[], invalid_tool_calls=[])]}"
+       "  AIMessage(content=\"Hello, Bob! It's a pleasure to meet you. I hope this message finds you having a truly wonderful day, wherever you are. Thank you for taking the moment to introduce yourself—it's a great start to our conversation. I'm here, ready to assist with any questions, ideas, or even just a friendly chat you might have in mind. So, welcome! What can I do for you today?\", additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 84, 'prompt_tokens': 15, 'total_tokens': 99, 'completion_tokens_details': None, 'prompt_tokens_details': {'audio_tokens': None, 'cached_tokens': 0}, 'prompt_cache_hit_tokens': 0, 'prompt_cache_miss_tokens': 15}, 'model_provider': 'openai', 'model_name': 'deepseek-chat', 'system_fingerprint': 'fp_eaab8d114b_prod0820_fp8_kvcache', 'id': '41832157-b00f-42b3-b7b1-5fce9314226e', 'finish_reason': 'stop', 'logprobs': None}, id='lc_run--019c6f7d-7a60-7a43-9810-ba81bceadd16-0', tool_calls=[], invalid_tool_calls=[], usage_metadata={'input_tokens': 15, 'output_tokens': 84, 'total_tokens': 99, 'input_token_details': {'cache_read': 0}, 'output_token_details': {}}),\n",
+       "  AIMessage(content='Total token number in the generated answer (word count) is 66', additional_kwargs={}, response_metadata={}, tool_calls=[], invalid_tool_calls=[])]}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "27f0c622",
    "metadata": {},
    "outputs": [
@@ -253,15 +254,8 @@
      "output_type": "stream",
      "text": [
       "HumanMessage: Hi, this is Bob. Say hello in detail.\n",
-      "AIMessage: Hello, Bob! It's a genuine pleasure to meet you. I hope this message finds you having a truly wonderful day, wherever you are and whatever you're doing.\n",
-      "\n",
-      "A detailed hello means more than just the word—it's an acknowledgment, a small moment of connection. So, welcome. I'm here, ready to listen, chat, help with questions, brainstorm ideas, or just offer a bit of digital companionship. Whether you're here for something specific or just passing the time, I'm glad our paths crossed.\n",
-      "\n",
-      "What's on your mind today, Bob? I'm all ears.\n",
-      "\n",
-      "Warmly,\n",
-      "Your AI Assistant\n",
-      "AIMessage: Total token number in the generated answer (word count) is 93\n"
+      "AIMessage: Hello, Bob! It's a pleasure to meet you. I hope this message finds you having a truly wonderful day, wherever you are. Thank you for taking the moment to introduce yourself—it's a great start to our conversation. I'm here, ready to assist with any questions, ideas, or even just a friendly chat you might have in mind. So, welcome! What can I do for you today?\n",
+      "AIMessage: Total token number in the generated answer (word count) is 66\n"
      ]
     }
    ],
@@ -498,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "id": "8753d49d",
    "metadata": {},
    "outputs": [],
@@ -516,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "id": "f3398a51",
    "metadata": {},
    "outputs": [
@@ -526,7 +520,7 @@
        "8"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "id": "8d4cf951",
    "metadata": {},
    "outputs": [
@@ -547,7 +541,7 @@
        "'multiply'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "id": "e3c6536f",
    "metadata": {},
    "outputs": [
@@ -568,7 +562,7 @@
        "'Multiplies two integers and returns the result\\n\\n        Args:\\n        a: int, a number\\n        b: int, a number'"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "id": "52462425",
    "metadata": {},
    "outputs": [
@@ -590,7 +584,7 @@
        " 'b': {'title': 'B', 'type': 'integer'}}"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 21,
    "id": "d619b48b",
    "metadata": {},
    "outputs": [],
@@ -659,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 22,
    "id": "c0c9e9d9",
    "metadata": {},
    "outputs": [],
@@ -697,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 23,
    "id": "dff64f93",
    "metadata": {},
    "outputs": [],
@@ -707,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 24,
    "id": "2af76568",
    "metadata": {},
    "outputs": [],
@@ -717,17 +711,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 25,
    "id": "76ffa151",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 90, 'prompt_tokens': 467, 'total_tokens': 557, 'completion_tokens_details': {'accepted_prediction_tokens': None, 'audio_tokens': None, 'reasoning_tokens': 40, 'rejected_prediction_tokens': None}, 'prompt_tokens_details': {'audio_tokens': None, 'cached_tokens': 448}, 'prompt_cache_hit_tokens': 448, 'prompt_cache_miss_tokens': 19}, 'model_provider': 'openai', 'model_name': 'deepseek-reasoner', 'system_fingerprint': 'fp_eaab8d114b_prod0820_fp8_kvcache', 'id': 'fc8b8283-6709-471c-9fbc-319b8d764325', 'finish_reason': 'tool_calls', 'logprobs': None}, id='lc_run--019c6bba-4928-72f2-b388-af41274ea309-0', tool_calls=[{'name': 'get_stock_price', 'args': {'ticker': 'TCS.NS'}, 'id': 'call_00_5dfoq8C1Ikhslq0mgqxzcOsd', 'type': 'tool_call'}], invalid_tool_calls=[], usage_metadata={'input_tokens': 467, 'output_tokens': 90, 'total_tokens': 557, 'input_token_details': {'cache_read': 448}, 'output_token_details': {'reasoning': 40}})"
+       "AIMessage(content=\"I'll get the stock price for TCS.NS for you.\", additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 62, 'prompt_tokens': 467, 'total_tokens': 529, 'completion_tokens_details': None, 'prompt_tokens_details': {'audio_tokens': None, 'cached_tokens': 448}, 'prompt_cache_hit_tokens': 448, 'prompt_cache_miss_tokens': 19}, 'model_provider': 'openai', 'model_name': 'deepseek-chat', 'system_fingerprint': 'fp_eaab8d114b_prod0820_fp8_kvcache', 'id': '94bb560a-f411-4178-8e0b-c4a95975263f', 'finish_reason': 'tool_calls', 'logprobs': None}, id='lc_run--019c6f7e-4740-7c81-8dbe-67f81bb32d30-0', tool_calls=[{'name': 'get_stock_price', 'args': {'ticker': 'TCS.NS'}, 'id': 'call_00_S7MkAGfZOoYja1R6gv7M7G0A', 'type': 'tool_call'}], invalid_tool_calls=[], usage_metadata={'input_tokens': 467, 'output_tokens': 62, 'total_tokens': 529, 'input_token_details': {'cache_read': 448}, 'output_token_details': {}})"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 26,
    "id": "fcb7c086",
    "metadata": {},
    "outputs": [
@@ -748,11 +742,11 @@
       "text/plain": [
        "[{'name': 'get_stock_price',\n",
        "  'args': {'ticker': 'TCS.NS'},\n",
-       "  'id': 'call_00_5dfoq8C1Ikhslq0mgqxzcOsd',\n",
+       "  'id': 'call_00_S7MkAGfZOoYja1R6gv7M7G0A',\n",
        "  'type': 'tool_call'}]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 27,
    "id": "b8714deb",
    "metadata": {},
    "outputs": [],
@@ -777,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 28,
    "id": "065f239b",
    "metadata": {},
    "outputs": [],
@@ -791,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 29,
    "id": "a31de38b",
    "metadata": {},
    "outputs": [],
@@ -801,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 30,
    "id": "72504619",
    "metadata": {},
    "outputs": [],
@@ -811,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 31,
    "id": "71b5bd5d",
    "metadata": {},
    "outputs": [],
@@ -826,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 32,
    "id": "faaaf1cf",
    "metadata": {},
    "outputs": [
@@ -847,8 +841,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "4e94398b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = app.invoke(\n",
+    "    {\n",
+    "        'messages': [HumanMessage(content='What is the price of TSLA today?')]\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "9536f90c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "What is the price of TSLA today?\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "I'll check the current stock price for TSLA for you.\n",
+      "Tool Calls:\n",
+      "  get_stock_price (call_00_oswkfpZynLls8UrkyX1hMEm1)\n",
+      " Call ID: call_00_oswkfpZynLls8UrkyX1hMEm1\n",
+      "  Args:\n",
+      "    ticker: TSLA\n",
+      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
+      "Name: get_stock_price\n",
+      "\n",
+      "The latest closing price of TSLA was $410.63\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "The latest closing price for TSLA (Tesla) is $410.63. This is the most recent closing price available through the stock data service.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for m in result['messages']:\n",
+    "    m.pretty_print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86d8c77b",
    "metadata": {},
    "outputs": [],
    "source": []
